environments/webapps/tls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-tls-app
  namespace: webapps
spec:
  selector:
    app: vault-tls-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
